tests/invalid/missing_function_brace.ar
fn main() {
    const i: usize;
